* The message layout was broken on Firefox when using very long words (firefox.css) [Bug 4111]
git-svn-id: https://devel.simplemachines.org/code/smf/trunk@9689 a96bbafc-d752-43aa-a6db-eed64a5f2cf9

--- a/Themes/default/css/firefox.css
+++ b/Themes/default/css/firefox.css
@@ -6,6 +6,10 @@ See https://bugzilla.mozilla.org/show_bug.cgi?id=215055 for more info.
 {
 	overflow: visible;
 }
+.inner
+{
+	word-wrap: break-word;
+}
 
 /* Display.template */
 #quickreplybox h3.catbg
